Cancel_Appoinment_Admin

--- a/detailing-fe/src/models/AllAppointments.css
+++ b/detailing-fe/src/models/AllAppointments.css
@@ -121,3 +121,19 @@ label {
   margin-bottom: 8px;
   display: block;
 }
+.delete-button {
+  background-color: red;
+  color: white;
+  border: none;
+  padding: 8px 12px;
+  margin-top: 10px;
+  font-size: 14px;
+  font-weight: bold;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.delete-button:hover {
+  background-color: darkred;
+}
