--- a/detailing-fe/src/models/AllAppointments.css
+++ b/detailing-fe/src/models/AllAppointments.css
@@ -137,3 +137,20 @@ label {
 .delete-button:hover {
   background-color: darkred;
 }
+.modal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: white;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  z-index: 1000;
+}
+
+.modal-buttons {
+  margin-top: 10px;
+  display: flex;
+  justify-content: space-between;
+}
