--- a/detailing-fe/src/models/AllServices.css
+++ b/detailing-fe/src/models/AllServices.css
@@ -25,8 +25,8 @@
   padding: 16px;
   text-align: center;
   transition:
-          transform 0.3s,
-          box-shadow 0.3s;
+    transform 0.3s,
+    box-shadow 0.3s;
   height: 350px;
   width: 280px;
 
@@ -73,8 +73,8 @@
 
 /* Button for "Book Appointment" */
 .service-card button {
-  background-color: #000000;   /* white background */
-  color: #000;             /* black text */
+  background-color: #000000; /* white background */
+  color: #000; /* black text */
   border: none;
   border-radius: 4px;
   padding: 8px 16px;
@@ -90,7 +90,10 @@
 /* Responsive adjustments */
 @media (max-width: 992px) {
   .services-container {
-    grid-template-columns: repeat(2, 1fr); /* 2 cards per row on medium screens */
+    grid-template-columns: repeat(
+      2,
+      1fr
+    ); /* 2 cards per row on medium screens */
     padding: 16px 24px;
   }
 }
