--- a/detailing-fe/src/App.css
+++ b/detailing-fe/src/App.css
@@ -1,3 +1,17 @@
+html, body, #root {
+  margin: 0;
+  padding: 0;
+  background: black !important;
+}
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  background-color: black;
+}
 .App {
   text-align: center;
 }
