--- a/detailing-fe/src/pages/Footer.css
+++ b/detailing-fe/src/pages/Footer.css
@@ -1,4 +1,3 @@
-/* Global Reset */
 * {
   margin: 0;
   padding: 0;
@@ -8,11 +7,11 @@
 body {
   background-color: black;
 }
+
 .footer {
-  background-color: #000; /* Matches black home background */
+  background-color: #000;
   color: #fff;
   padding: 20px;
-  margin-top: 40px;
   width: 100%;
 }
 
@@ -20,7 +19,7 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  max-width: 1200px; /* Adjust as needed */
+  max-width: 1200px;
   margin: 0 auto;
 }
 
@@ -36,7 +35,7 @@ body {
 .social-links {
   display: flex;
   gap: 15px;
-  font-size: 1.2rem; /* Icon size */
+  font-size: 1.2rem;
 }
 
 .social-links a {
