--- a/detailing-fe/src/pages/Home.css
+++ b/detailing-fe/src/pages/Home.css
@@ -11,22 +11,26 @@
 }
 
 .video-wrapper {
-  width: 100%;
-  height: 100%;
-  background: black;
   position: absolute;
   top: 0;
   left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden; /* Ensures anything outside is hidden */
+  background: black;
   z-index: 1;
 }
 
 .vimeo-iframe {
-  width: 100%;
-  height: 100%;
-  border: none;
   position: absolute;
-  top: 0;
-  left: 0;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  min-width: 100%;
+  min-height: 100%;
+  width: auto;
+  height: auto;
+  border: none;
   z-index: 1;
 }
 
@@ -60,9 +64,9 @@
 }
 
 .video-button {
-  border: 2px solid #ff00ff;
+  border: 2px solid #c772ff;
   background: transparent;
-  color: #ff00ff;
+  color: #c772ff;
   padding: 10px 20px;
   border-radius: 30px;
   font-size: 1.2rem;
@@ -76,7 +80,7 @@
 }
 
 .video-button:hover {
-  background-color: #ff00ff;
+  background-color: #c772ff;
   color: white;
 }
 
